# stardraw

./: .gitmodules  CMakeLists.txt
cmake/: Config.cmake  Dependencies.cmake  Sources.cmake
sources/stardraw/: CMakeLists.txt
sources/stardraw-demo/: CMakeLists.txt  main.cpp  shader.slang
sources/stardraw/api/: commands.hpp  descriptors.hpp  memory_transfer.hpp  render_context.hpp  shader_parameter_value.hpp  shaders.hpp  slang.cpp  slang.hpp  types.hpp  window.hpp
sources/stardraw/gl45/: commands_impl.cpp  render_context.cpp  render_context.hpp  staging_buffer_uploader.cpp  staging_buffer_uploader.hpp  types.hpp  window.cpp  window.hpp
sources/stardraw/gl45/object_states/: buffer_state.cpp  buffer_state.hpp  draw_specification_state.cpp  draw_specification_state.hpp  shader_state.cpp  shader_state.hpp  texture_state.cpp  texture_state.hpp  vertex_specification_state.cpp  vertex_specification_state.hpp
sources/stardraw/internal/: glfw_window.cpp  glfw_window.hpp  internal.hpp  shaders.cpp  window.cpp
sources/stardraw/test/: main.cpp  main.hpp
sources/stardraw/vk13/: Device.cpp  Device.hpp  Render.hpp  simple_window.cpp  simple_window.hpp  vk_device.cpp  vk_device.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_render.cpp  vk_render.hpp  vk_swapchain.cpp  vk_swapchain.hpp
