add_library(stardraw STATIC
        vk13/vk_pipeline.hpp
        vk13/vk_pipeline.cpp)

target_sources(stardraw PRIVATE

        internal/api_impl.cpp
        internal/render_context.cpp
        internal/slang.cpp
        internal/glfw_window.hpp internal/glfw_window.cpp

        gl45/commands_impl.cpp
        gl45/gl45_impl.hpp gl45/gl45_impl.cpp
        gl45/object_states.hpp gl45/object_states.cpp
        gl45/types.hpp
        gl45/gl_45_window.hpp gl45/gl_45_window.cpp

        vk13/vk_device.hpp vk13/vk_device.cpp
        vk13/simple_window.hpp vk13/simple_window.cpp
)

target_sources(stardraw PUBLIC FILE_SET HEADERS BASE_DIRS ${H_SOURCES_ROOT} FILES
        api/render_context.hpp
        api/types.hpp
        api/api_impl.hpp
        api/polymorphic_list.hpp
        api/descriptors.hpp
        api/commands.hpp
        api/window.hpp

        internal/slang.hpp #TEMPORARILY EXPOSED
)
message(Vulkan Dirs: ${Vulkan_INCLUDE_DIRS})
target_include_directories(stardraw PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include/stardraw>
        ${Vulkan_INCLUDE_DIRS}
)

target_compile_options(stardraw PUBLIC /EHsc -Wno-microsoft-extra-qualification)

set_target_properties(stardraw PROPERTIES LINKER_LANGUAGE CXX)

target_include_directories(stardraw PRIVATE ${OPENGL_INCLUDE_DIR})

target_link_libraries(stardraw PRIVATE ${OPENGL_LIBRARIES})
target_link_libraries(stardraw PRIVATE TracyClient)
target_link_libraries(stardraw PRIVATE glad)
target_link_libraries(stardraw PRIVATE slang::slang)
target_link_libraries(stardraw PRIVATE Vulkan::Vulkan)
target_link_libraries(stardraw PRIVATE glfw)


add_executable(StardrawTest ./test/main.cpp ./vk13/simple_window.cpp ./vk13/vk_device.cpp
        vk13/vk_pipeline.hpp
        vk13/vk_pipeline.cpp)

target_link_libraries(StardrawTest PUBLIC ${OPENGL_LIBRARIES})
target_link_libraries(StardrawTest PUBLIC TracyClient)
target_link_libraries(StardrawTest PUBLIC glad)
target_link_libraries(StardrawTest PUBLIC slang::slang)
target_link_libraries(StardrawTest PUBLIC Vulkan::Vulkan)
target_link_libraries(StardrawTest PUBLIC glfw)
